<resources>
    <string name="app_name">WorkoutWithMegan</string>
    <string name="action_settings">Settings</string>
    <string name="successful_login">Successful Login!</string>
    <string name="unsuccessful_login">Unsuccessful Login, try again</string>
    <string name="username">Jdoe</string>
    <string name="password">welcome1</string>
    <string name="title_activity_launch">Sign in</string>
    <string name="login_button">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- login -->
    <string name="profileimage">User Profile Photo</string>
    <string name="usernameText">Username</string>
    <string name="passwordText">Password</string>

    <!-- new_customer.xml -->
    <string name="newEmail">Email</string>
    <string name="addNewCustomerButton">Add New Customer</string>
    <string name="newCustomerPhone">Phone Number</string>
    <string name="newCustomerAddress">Address</string>
    <string name="newCustomerName">Full Name</string>
    <string name="backBtn">Back to Customers</string>
    <string name="photoBtn">Take Photo</string>
    <string name="title_activity_new_customer">NewCustomerActivity</string>

    <!-- signature.xml -->
    <string name="signatureTextView">Sign Below</string>
    <string name="signatureButton">Submit Signature</string>

    <!-- customerlist.xml -->
    <string name="customerList">Customer List</string>
    <string name="newCustomerBtn">Add New Customer</string>

    <!-- loggedin_Fragment.xml -->
    <string name="loggedInFragment">Logged in: @string/Username</string>

    <!-- receipt.xml -->
    <string name="printReceiptButton">Print Receipt</string>
    <string name="emailEditText">Enter e-mail</string>
    <string name="emailReceiptButton">Email Receipt</string>

    <string name="returnHomeButton">Back to Home</string>

    <!--payment.xml -->
    <string name="paymentInfoText">
        Price Per Session: $15\n\Number of Sessions: 5\n\Total: $75</string>
    <string name="creditPaymentText">Credit Card Payment Info</string>
    <string name="creditCardName">Name On Card</string>
    <string name="creditCardNumber">Card Number</string>
    <string name="securityCodeNumber">Security Code</string>
    <string name="billingAddressText">Billing Address</string>
    <string name="submitPaymentButton">Submit Payment</string>


    <!-- profileinfo.xml -->
    <string name="customerNameText">First and Last Name</string>
    <string name="customerPhoneNumber">Phone Number</string>
    <string name="customerAddressText">Address</string>
    <string name="customerSessions">Sessions:</string>
    <string name="addMoreSessionsButton">Add More Sessions</string>


    <!-- menu_options_menu.xml -->
    <string name="menu_log_off">Log Off</string>
    <string name="title_activity_customer_list">CustomerListActivity</string>

    <!-- listview.xml-->
    <string name="LVname">Full Name</string>
    <string name="LVphone">Phone Number</string>
    <string name="LVaddress">Address</string>
    <string name="LVemail">Email</string>
    <string name="LVimage">Image</string>


</resources>
