<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1">

    <fragment
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="hometrainer.workoutwithmegan.LoggedinFragment"
        android:id="@+id/fragment2"
        android:layout_gravity="center_horizontal"
        tools:layout="@layout/loggedin_fragment"/>

    <ImageView
        android:layout_width="300px"
        android:layout_height="300px"
        android:id="@+id/profileimage"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/profileimage"
        android:src="@drawable/profileimage"
        />

    <ImageButton
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:text="@string/photoBtn"
        android:id="@+id/photoBtn"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/cameraicon"
        android:layout_weight="0.15"
        android:contentDescription="Take Photo"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newCustomerName"
        android:ems="10"
        android:id="@+id/newCustomerName"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/newCustomerAddress"
        android:text="@string/newCustomerAddress"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/newCustomerPhone"
        android:text="@string/newCustomerPhone"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newEmail"
        android:text="@string/newEmail"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backBtn"
        android:id="@+id/backBtn"/>

        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addNewCustomerButton"
        android:id="@+id/addNewCustomerButton"
        android:layout_gravity="center_horizontal"
        android:onClick="createNewCustomer"/>

    </LinearLayout>

</LinearLayout>